# FoliarShield-AI

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Progress.md  README.md  ToDo.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/baselines/: README.md
benchmarks/reports/: local-smoke-result.json  seed_baseline_benchmark_report.json  seed_candidate_shortlist.json  seed_heuristic_baselines.json  seed_optimizer_only_baseline.json  seed_optimizer_proposals.json  seed_random_candidate_baseline.json  seed_reasoning_only_baseline.json
benchmarks/tasks/: README.md
configs/: modeling.yaml  pilot_tasks.yaml  reproducibility_manifest.example.json  source_registry.seed.json
data/interim/: source_manifest.seed-crop-stress.json  source_manifest.seed-formulation.json  source_manifest.seed-literature.json  source_manifest.seed-strains.json
data/processed/: data_quality_report.json  pilot_task_datasets.json  seed_candidate_encoding.json  seed_candidate_scorecards.json  seed_candidate_search_space.json  seed_crop_stress_evidence.json  seed_curation_report.json  seed_evaluator_objectives.json  seed_evidence_review_queue.json  seed_extraction_evaluation.json  seed_feature_table.json  seed_formulation_evidence.json  seed_knowledge_graph.json  seed_knowledge_graph_validation.json  seed_literature_chunks.json  seed_retrieval_index.json  seed_strains.json  (+1 more)
docs/: architecture.md  data_contracts.md  feature_representations.md  reproducibility.md  responsible_use.md
tests/: test_cli.py  test_evidence.py  test_features.py  test_ingestion.py  test_schemas.py
(+12 files in other folders)
