[project]
name = "foliarshield-ai"
version = "0.1.0"
description = "Research prototype for literature-grounded foliar retention and controlled-release formulation design."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "FoliarShield-AI Contributors" }
]
dependencies = []

[project.scripts]
foliarshield-ai = "foliarshield_ai.cli:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
strict = true
